# game-physics

./: .gitignore  CMakeLists.txt  compile_and_run.sh
sandbox/src/: main.cpp
simplistic/src/: Core.cpp  Core.h  Particle.h  Precision.h  Simplistic.h
